--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,21 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic"
-    
+  "java.compile.nullAnalysis.mode": "automatic",
+
+  "files.exclude": {
+    "**/.git": true,
+    "**/.gitignore": true,
+    "**/node_modules": true,
+    "**/dist": true,
+    "**/build": true,
+    "**/.env": true,
+    "**/.DS_Store": true,
+    "**/coverage": true,
+    "**/*.log": true,
+    "**/target": true,
+    "**/tailwind.config.js": true,
+    "**/setupTests.ts": true,
+    "**/react-app-env.d.ts": true,
+    "**/tsconfig.json": true,
+    "**/reportWebVitals.ts": true
+  }
 }
