--- a/backend/UserMs/src/main/resources/application.properties
+++ b/backend/UserMs/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=UserMs
+
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/userdb
+spring.datasource.username=root
+spring.datasource.password=mohan@1997
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
